@@ -26,6 +26,12 @@ GtkWidget* gtk_action_create_icon (GtkAction *action, GtkIconSize icon_size);
 
 GtkWidget* gtk_action_create_menu_item (GtkAction *action);
 
+#if GTK_CHECK_VERSION (2, 11, 0) /* FIXME: 2.12 */
+
+GtkWidget* gtk_action_create_menu (GtkAction *action);
+
+#endif
+
 GtkWidget* gtk_action_create_tool_item (GtkAction *action);
 
 void gtk_action_connect_proxy (GtkAction *action, GtkWidget *proxy);
